compiler/tests/invalid_programs/syntax/no_end_while.jm
!SyntaxError

while "foo"
  puts("bar")
